--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head> 
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <title>Automatic Dark/Light Theme Time Counter</title> 
+  <title>start page</title> 
   <style>
         * {
             margin: 0;
