--- a/index.html
+++ b/index.html
@@ -127,9 +127,7 @@
    <div class="date" id="date">
     --
    </div> 
-   <div class="greeting" id="greeting">
-    Good day!
-   </div> <!-- Google Search Icon/Button --> <a href="https://www.google.com" target="_blank" class="search-button"> <span>🔍</span> Go to Google </a> 
+    <!-- Google Search Icon/Button --> <a href="https://www.google.com" target="_blank" class="search-button"> <span>🔍</span> Go to Google </a> 
   </div> <!-- Round Toggle Button --> <button class="toggle-button" onclick="toggleTheme()">🌙</button> 
   <script>
         function updateTime() {
